@@ -15,9 +15,10 @@ Changelog:
     Don't show entries for disabled engines in #--TRANSCODE--# folder
     Allow Traces tab panel to auto-scroll (thanks, LordQuackstar!)
     Revert changes to SMP-N100.conf that conflict with Sony Blu-ray players and break MKV support (thanks, mrw1986)
+    Replaced ImageMagick with Thumbnailator for thumbnail generation
+    Fix FFmpeg engine's handling of unsupported custom options (thanks, ajamess)
     PMS.conf:
         - Added transcode_folder_name option to allow #--TRANSCODE--# folder name to be customized (issue GC963)
-    Replaced ImageMagick with Thumbnailator for thumbnail generation
 
 1.60.0 - 2012-07-17
 
